k8s/strategies/canary/backend-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-devops-backend-canary
  namespace: ma-devops
  labels:
    app: ma-devops-backend-canary
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ma-devops-backend-canary
      track: canary
  template:
    metadata:
      labels:
        app: ma-devops-backend-canary
        track: canary
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: backend
          image: rayyan12311/ma-devops-backend:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ma-devops-backend-canary-svc
  namespace: ma-devops
  labels:
    app: ma-devops-backend-canary
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: ma-devops-backend-canary
    track: canary
