k8s/strategies/canary/backend-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ma-devops-backend-canary-ingress
  namespace: ma-devops
  labels:
    app: ma-devops-backend-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ma-devops-backend-canary-svc
                port:
                  number: 8080
